objects/Product_Information__c/Product_Information__c.object-meta.xml
<CustomObject>
    <description>This Object will hold the information about the Product and Countries</description>
    <label>Product Information</label>
    <nameField>
        <displayFormat>PI_{000}</displayFormat>
        <label>Product_Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>