objects/Product_Information__c/fields/Charges__c.field-meta.xml
<CustomField>
    <fullName>Charges__c</fullName>
    <description>This will Hold the actual Charges information
This could have been a Currency field, but the Nature of Data shown in the sample tables in the assignment requires it to be text. e.g. € 9,90 N/a , Free and 1.7%</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>