objects/Product_Information__c/fields/Home_Country__c.field-meta.xml
<CustomField>
    <fullName>Home_Country__c</fullName>
    <description>This will Hold the 2 Digit Country Code, we will be having the same type of Field be present on Contact so that we can match the records.</description>
    <label>Home Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Home_Country</valueSetName>
    </valueSet>
</CustomField>