objects/Product_Information__c/fields/Type_of_Charges__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Charges__c</fullName>
    <description>This Picklist will hold the Type of Charges</description>
    <label>Type of Charges</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATM Fee in other currencies</fullName>
            </value>
            <value>
                <fullName>Card Replacement Cost</fullName>
            </value>
            <value>
                <fullName>Cost per Calendar Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>